# llnzy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bundle.sh  dev.sh
.github/workflows/: ci.yml
Daily Growth/Road Maps/: llnzy-roadmap.md
assets/: Info.plist  install-cli.sh  llnzy.icns  packaging.env  uninstall-cli.sh
daily-growth/: agent-stacker-integration-guide.md  tweaks-2.md  tweaks.md
daily-growth/error-log-challenge/: error-log-superlist.md
daily-growth/mm-dd-yyyy-summary/: 04-15-2026.md  04-22-2026.md  04-24-2026.md  04-25-2026.md  04-26-2026.md  04-28-2026.md  04-30-2026.md  05-01-2026.md  05-02-2026.md  05-03-2026.md  05-04-2026.md  05-05-2026.md  05-06-2026.md  05-07-2026.md  05-08-2026.md  05-09-2026.md  05-10-2026.md  05-11-2026.md  05-12-2026.md  05-13-2026.md  05-14-2026.md  05-15-2026.md  05-16-2026.md  05-17-2026.md  06-07-2026-refactor.md  06-07-2026.md  07-01-2026.md
daily-growth/roadmaps/: an-image-for-a-thousand-tokens.md  appearance-surface-settings-plan.md  code-quality-checklist.md  code-quality-editing-roadmap-05-12-2026.md  code-quality-review-05-16-2026.md  code-quality-review-2026-05-04.md  code-quality-to-10-05-14-2026.md  critical-review-05-14-2026.md  cross-platform-compatibility-roadmap-05-04-2026.md  editor-refinements.md  editor-roadmap.md  enterprise-editor-readiness-review-05-02-2026.md  explorer-sidebar-code-quality.md  external-command-handoff-contract-05-04-2026.md  future-laundry.md  future-roadmap.md  gpui2-modular-integration.md  jaded-review.md  laundry-list.md  leftovers-code-editor.md  leftovers-roadmap-3.md  leftovers.md  llnzy-3d-code-editor-research-04-29-2026.md  llnzy-code-quality-cleanup-roadmap.md  llnzy-critical-review-04-28-2026.md  llnzy-drag-and-drop-roadmap-04-29-2026.md  llnzy-graphics-engine-roadmap.md  llnzy-reliability-durability-roadmap-05-01-2026.md  llnzy-roadmap.md  llnzy-sketch-pad-roadmap.md  llnzy-source-editor-roadmap.md  manual laundry.md  not-so-quick-list.md  performance-and-durability-roadmap-05-16-2026.md  platform-boundary-architecture-05-04-2026.md  release-build-editor-smoke-checklist.md  reliability-manual-testing-05-02-2026.md  roadmap-to-maintenance.md  runtime-diagnostics-cleanup-06-07-2026.md  shortlist.md  (+5 more)
docs/: architecture.md  configuration.md  development.md  joined-layout-manual-verification-05-04-2026.md  llnzy-phase-9-product-hierarchy-ux-consistency-05-02-2026.md  manual-smoke-checklist.md  manual-smoke-tests.md  operations.md  performance-roadmap-05-08-2026.md  performance.md  quality-policy.md  rendering-architecture-05-05-2026.md  security-governance-05-05-2026.md  stacker-cli.md  stacker-command-workflow-05-05-2026.md  tab-grouping-engine-tests.md  terminal-rendering-visual-verification-05-05-2026.md
docs/adrs/: 0001-supported-platform-and-quality-gate.md  0002-editor-position-model.md  0003-terminal-and-pty-boundary.md  0004-gpui-render-boundaries.md
roadmaps/: shortlist.md
spikes/gpui_foundation/: Cargo.toml  README.md
src/: async_guard.rs  atomic_write.rs  config.rs  diagnostics.rs  effects.rs  error_log.rs  explorer.rs  external_command.rs  external_input_trace.rs  fs_watch.rs  git.rs  gpui_editor.rs  gpui_sketch.rs  gpui_stacker.rs  gpui_tabs.rs  gpui_terminal.rs  gpui_workspace.rs  input.rs  keybindings.rs  layout.rs  lib.rs  macos_text_bridge.rs  main.rs  menu.rs  path_utils.rs  performance.rs  preferences.rs  pty.rs  search.rs  selection.rs  session.rs  sketch.rs  stacker.rs  stacker_input_client.rs  stacker_native_view.rs  stacker_webview.rs  tasks.rs  terminal.rs  text_utils.rs  theme.rs  (+5 more)
src/app/: click_state.rs  commands.rs  drag_drop.rs  file_location.rs  keybinding_commands.rs  mod.rs  terminal_events.rs  window_state.rs  zoom_shortcuts.rs
src/config/: apply.rs  colors.rs  keybinding_mapping.rs  load.rs  model.rs  presets.rs  schema.rs  tests.rs
src/editor/: buffer.rs  cursor.rs  editorconfig.rs  file_watcher.rs  git_gutter.rs  history.rs  keymap.rs  mod.rs  perf.rs  project_search.rs  recovery.rs  search.rs  snippet.rs  stress_fixtures.rs  syntax.rs  tests.rs
src/effects/: element.rs  host.rs
src/engine/: mod.rs
src/git/: command.rs  detail.rs  error.rs  log.rs  model.rs  status.rs  tests.rs  watcher.rs
src/gpui_editor/: commands.rs  file_state.rs  files.rs  input.rs  key_actions.rs  line_render.rs  lsp.rs  render.rs  search.rs
src/gpui_sketch/: canvas_element.rs  paint.rs  render.rs
src/gpui_stacker/: layout.rs  render.rs  text_input.rs
src/gpui_terminal/: effects.rs  render.rs  text.rs
src/gpui_workspace/: appearance_actions.rs  appearances.rs  command_palette.rs  footer.rs  home.rs  menu_actions.rs  panes.rs  project.rs  recovery.rs  sidebar.rs  tabs.rs
src/lsp/: client.rs  diagnostics.rs  document.rs  lifecycle.rs  manager.rs  mod.rs  registry.rs  requests.rs  symbols.rs  test_harness.rs  transport.rs  types.rs  workspace_edit.rs
src/main/: stacker_input.rs  terminal_mouse.rs  tests.rs
src/main_app/: events.rs  frame.rs  handler.rs  lifecycle.rs  mod.rs  terminal_input.rs  tick.rs
src/platform/: clipboard.rs  input.rs  menu.rs  mod.rs  open.rs  packaging.rs  paths.rs  power.rs  shell.rs  terminal_host.rs
src/renderer/: background.rs  blit.rs  bloom.rs  config_helpers.rs  crt.rs  cursor.rs  flip.rs  frame_adapter.rs  layers.rs  mod.rs  particles.rs  passes.rs  rect.rs  request.rs  settings_ui.rs  state.rs  text.rs
src/runtime/: commands.rs  drag_drop.rs  editor_commands.rs  external_commands.rs  layout.rs  mod.rs  recovery.rs  save_prompt.rs  session_restore.rs  tabs.rs  terminal.rs  window.rs
src/sidebar_move/: destinations.rs  mod.rs  model.rs  plan.rs
src/sketch/: appearance.rs  commands.rs  export.rs  geometry.rs  hit_testing.rs  media.rs  model.rs  serialization.rs  state.rs  tests.rs  tools.rs
src/stacker/: cli.rs  commands.rs  document.rs  draft.rs  formatting.rs  input.rs  queue.rs  session.rs  storage.rs  sync.rs  utf16.rs
src/tab_groups/: mod.rs  model.rs
src/terminal/: colors.rs  events.rs  grid.rs  links.rs  (+4 more)
tests/: performance_budgets.rs  pty_roundtrip.rs  terminal_emulation.rs
(+175 files in other folders)
