[package]
name = "llnzy"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22"
glyphon = "0.6"
alacritty_terminal = "0.26"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
regex = "1"
serde_json = "1"
image = "0.25"
rfd = "0.15"
taffy = "0.7"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
libc = "0.2"
ropey = "1"
unicode-segmentation = "1"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-json = "0.24"
# tree-sitter-toml = "0.20"  # incompatible with tree-sitter 0.26
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
lsp-types = "0.97"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
notify = "7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder", "NSText", "NSTextView", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString"] }
