[package]
name = "llnzy"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpui-editor = ["dep:gpui"]
gpui-stacker = ["dep:gpui"]

[dependencies]
winit = "0.30"
wgpu = "22"
glyphon = "0.6"
alacritty_terminal = "0.26"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
regex = "1"
serde_json = "1"
image = "0.25"
rfd = "0.15"
taffy = "0.7"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
libc = "0.2"
ropey = "1"
unicode-segmentation = "1"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-json = "0.24"
# tree-sitter-toml = "0.20"  # incompatible with tree-sitter 0.26
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
lsp-types = "0.97"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
notify = "7"
rustc-hash = "2"
ulid = "1"
sha2 = "0.10"
gpui = { version = "=0.2.2", optional = true, features = ["macos-blade"] }

[[bin]]
name = "gpui-stacker"
path = "src/bin/gpui_stacker.rs"
required-features = ["gpui-stacker"]

[[bin]]
name = "gpui-editor"
path = "src/bin/gpui_editor.rs"
required-features = ["gpui-editor"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAccessibility", "NSAccessibilityConstants", "NSApplication", "NSColor", "NSFont", "NSMenu", "NSMenuItem", "NSResponder", "NSScrollView", "NSText", "NSTextInputClient", "NSTextView", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString"] }
# Compile dependencies with full optimizations even in dev builds.
# wgpu/glyphon/egui/ropey are unusable at opt-level=0.
[profile.dev.package."*"]
opt-level = 3

# Light optimization for our own crate so per-keystroke O(n) walks
# (rope→String materialisation, word/line counters, UTF-16 index
# conversion) don't dominate typing latency on long prompts. Debug info
# and incremental compile speed are preserved at opt-level=1.
[profile.dev]
opt-level = 1
