[package]
name = "llnzy"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpui-workspace"]
gpui-editor = ["dep:gpui"]
gpui-stacker = ["dep:gpui"]
gpui-workspace = ["gpui-editor", "gpui-stacker"]

[dependencies]
alacritty_terminal = "0.26"
portable-pty = "0.8"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
regex = "1"
serde_json = "1"
image = "0.25"
rfd = "0.15"
resvg = "0.45.1"
usvg = "0.45.1"
libc = "0.2"
ropey = "1"
unicode-segmentation = "1"
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-json = "0.24"
# tree-sitter-toml = "0.20"  # incompatible with tree-sitter 0.26
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
lsp-types = "0.97"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time", "macros"] }
notify = "7"
rustc-hash = "2"
ulid = "1"
sha2 = "0.10"
gpui = { version = "=0.2.2", optional = true, features = ["macos-blade"] }

# Custom WGSL shader pipeline behind GPUI's `Window::paint_surface` hook.
# wgpu = renderer, naga = WGSL parse/validate, wgpu-hal = Metal texture
# import from a CVPixelBuffer (the only macOS-public way to put per-pixel
# shader content under GPUI's text). `core-video` and `metal` versions
# match what gpui 0.2.2 itself pulls in, so the CVPixelBuffer / MTLTexture
# types are the same instances GPUI's renderer will sample.
[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "=29.0.3", default-features = false, features = ["metal", "wgsl"] }
wgpu-hal = { version = "=29.0.3", features = ["metal"] }
naga = { version = "=29.0.3", features = ["wgsl-in"] }
core-video = { version = "=0.4.3", features = ["metal"] }
core-foundation = "=0.10"
metal = "=0.29"
# Blocking executor used to drive wgpu's async device/adapter init and the
# per-frame staging-buffer map_async from EffectsHost without pulling a full
# tokio runtime onto the render path.
pollster = "=0.4"

[[bin]]
name = "gpui-stacker"
path = "src/bin/gpui_stacker.rs"
required-features = ["gpui-stacker"]

[[bin]]
name = "gpui-editor"
path = "src/bin/gpui_editor.rs"
required-features = ["gpui-editor"]

[[bin]]
name = "gpui-workspace"
path = "src/bin/gpui_workspace.rs"
required-features = ["gpui-workspace"]

# Compile dependencies with full optimizations even in dev builds.
# GPUI and editor parsing dependencies are noticeably sluggish at opt-level=0.
[profile.dev.package."*"]
opt-level = 3

# Light optimization for our own crate so per-keystroke O(n) walks
# (rope→String materialisation, word/line counters, UTF-16 index
# conversion) don't dominate typing latency on long prompts. Debug info
# and incremental compile speed are preserved at opt-level=1.
[profile.dev]
opt-level = 1
